fix: update margin spacing

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,7 @@ a:hover {
 .search-result {
   background-color: hsl(0deg 0% 10%);
   padding: 1rem;
-  margin: 1rem;
+  margin: 0.5rem;
   flex: 1 1 auto;
 }
 
